plugins {
    id 'java'
    id 'application'
    id 'com.diffplug.spotless' version '8.1.0'
}

group = 'com.davidconneely'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'com.davidconneely.bazlang.MainClass'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation 'org.jline:jline:3.29.0'
    testImplementation platform('org.junit:junit-bom:5.10.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += ['--enable-native-access=ALL-UNNAMED']
}

jar {
    manifest {
        attributes(
            'Main-Class': 'com.davidconneely.bazlang.MainClass',
            'Class-Path': configurations.runtimeClasspath.files.collect { "lib/$it.name" }.join(' ')
        )
    }
}

tasks.register('copyDependencies', Copy) {
    from configurations.runtimeClasspath
    into "$buildDir/libs/lib"
}

build.dependsOn copyDependencies

spotless {
    java {
        googleJavaFormat()
    }
}